updting head links for seo

--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -84,6 +84,8 @@
       href="https://draculady.de/Pages/resume-mobile-german.html"
       hreflang="de-DE"
     />
+    <link rel="canonical" href="https://draculady.de/Pages/files-german.html" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
