--- a/index-german.html
+++ b/index-german.html
@@ -99,6 +99,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="canonical"
+      href="https://draculady.de/Pages/contact-deutsch.html"
+    />
+
     <noscript>
       <link
         rel="stylesheet"
