--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -100,6 +100,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="canonical"
+      href="https://draculady.de/Pages/contact-english.html"
+    />
+
     <noscript>
       <link
         rel="stylesheet"
