--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -90,6 +90,10 @@
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Charis+SIL:ital,wght@0,400;0,700;1,400;1,700&family=Courgette&family=DM+Serif+Text:ital@0;1&family=Inter:wght@100..900&family=Kalam:wght@300;400;700&family=Maven+Pro:wght@400..900&family=Pacifico&family=Permanent+Marker&family=Poetsen+One&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="canonical"
+      href="https://draculady.de/Pages/portfolio-german.html"
+    />
 
     <link
       rel="preload"
