updting head links for seo

--- a/index-german.html
+++ b/index-german.html
@@ -326,13 +326,13 @@
                       target="_blank"
                     >
                       <h4>Crazy Cow</h4>
-                      <p>
-                        Dies ist die erste Seite, die ich selbst erstellt habe,
-                        indem ich HTML, CSS und JavaScript kombiniert habe.
-                        Klicken Sie auf die Bilder, schalten Sie die
-                        Lautsprecher ein und genießen Sie!
-                      </p>
                     </a>
+                    <p>
+                      Dies ist die erste Seite, die ich selbst erstellt habe,
+                      indem ich HTML, CSS und JavaScript kombiniert habe.
+                      Klicken Sie auf die Bilder, schalten Sie die Lautsprecher
+                      ein und genießen Sie!
+                    </p>
                   </div>
                 </div>
                 <div class="carousel-item">
@@ -347,12 +347,12 @@
                       target="_blank"
                     >
                       <h4>Animal World - reines JS Tamagotchi-Spiel</h4>
-                      <p>
-                        Ein Tamagotchi-Spiel, das ich als Abschlussprojekt für
-                        das Thema JavaScript erstellt habe. Alle Erklärungen
-                        finden Sie in der Readme-Datei.
-                      </p>
                     </a>
+                    <p>
+                      Ein Tamagotchi-Spiel, das ich als Abschlussprojekt für das
+                      Thema JavaScript erstellt habe. Alle Erklärungen finden
+                      Sie in der Readme-Datei.
+                    </p>
                   </div>
                 </div>
                 <div class="carousel-item">
@@ -369,13 +369,13 @@
                       <h4>
                         Uriya Peled - Private Teacher Freiberufliche Webseite
                       </h4>
-                      <p>
-                        Eine Webseite, die ich speziell für meinen Bruder
-                        erstellt habe, um ihm zu helfen, eine neue Karriere als
-                        freiberuflicher Privatlehrer zu starten. Das Projekt
-                        befindet sich noch in Arbeit.
-                      </p>
                     </a>
+                    <p>
+                      Eine Webseite, die ich speziell für meinen Bruder erstellt
+                      habe, um ihm zu helfen, eine neue Karriere als
+                      freiberuflicher Privatlehrer zu starten. Das Projekt
+                      befindet sich noch in Arbeit.
+                    </p>
                   </div>
                 </div>
                 <div class="carousel-item">
@@ -390,12 +390,12 @@
                       target="_blank"
                     >
                       <h4>Poke-pedia - Umfassende Pokémon-Informationen</h4>
-                      <p>
-                        Dieses Einzelseitenprojekt integriert JavaScript mit
-                        einer externen Datenbank. Suchen Sie nach einem Pokémon,
-                        um detaillierte Informationen zu erhalten.
-                      </p>
                     </a>
+                    <p>
+                      Dieses Einzelseitenprojekt integriert JavaScript mit einer
+                      externen Datenbank. Suchen Sie nach einem Pokémon, um
+                      detaillierte Informationen zu erhalten.
+                    </p>
                   </div>
                 </div>
                 <!-- Weitere Karussell-Elemente nach Bedarf hinzufügen -->
