--- a/index.html
+++ b/index.html
@@ -324,13 +324,12 @@
                       target="_blank"
                     >
                       <h4>Crazy Cow</h4>
-                      <p>
-                        This is the first page I created independently using
-                        what I learned in the JavaScript course, combining HTML,
-                        CSS, and JS. Click the images, turn on the speakers, and
-                        enjoy!
-                      </p>
                     </a>
+                    <p>
+                      This is the first page I created independently using what
+                      I learned in the JavaScript course, combining HTML, CSS,
+                      and JS. Click the images, turn on the speakers, and enjoy!
+                    </p>
                   </div>
                 </div>
                 <div class="carousel-item">
@@ -345,12 +344,12 @@
                       target="_blank"
                     >
                       <h4>Animal World - pure JS Tamagochi game</h4>
-                      <p>
-                        A tamagochi game I created as a final project fot the
-                        JavaScript topic. All the explanations are written in
-                        the Readme file.
-                      </p>
                     </a>
+                    <p>
+                      A tamagochi game I created as a final project fot the
+                      JavaScript topic. All the explanations are written in the
+                      Readme file.
+                    </p>
                   </div>
                 </div>
                 <div class="carousel-item">
@@ -365,12 +364,12 @@
                       target="_blank"
                     >
                       <h4>Uriya Peled - Private Teacher Freelance Website</h4>
-                      <p>
-                        A website I created specifically for my brother to help
-                        him start a new career as a freelance private teacher.
-                        The project is still in progress.
-                      </p>
                     </a>
+                    <p>
+                      A website I created specifically for my brother to help
+                      him start a new career as a freelance private teacher. The
+                      project is still in progress.
+                    </p>
                   </div>
                 </div>
                 <div class="carousel-item">
@@ -385,12 +384,12 @@
                       target="_blank"
                     >
                       <h4>Poke-pedia - Comprehensive Pokémon Information</h4>
-                      <p>
-                        This single-page project integrates JavaScript with an
-                        external database. Search for a Pokémon to retrieve
-                        detailed information.
-                      </p>
                     </a>
+                    <p>
+                      This single-page project integrates JavaScript with an
+                      external database. Search for a Pokémon to retrieve
+                      detailed information.
+                    </p>
                   </div>
                 </div>
               </div>
