updting head links for seo

--- a/Pages/contact-deutsch.html
+++ b/Pages/contact-deutsch.html
@@ -24,6 +24,21 @@
 
     <meta name="author" content="Kathrin Peled Draclady" />
     <meta name="robots" content="index, follow" />
+    <!-- OpenGraph Meta Tags for Contact Page (German) -->
+    <meta property="og:title" content="Kontakt Kathrin Peled" />
+    <meta
+      property="og:description"
+      content="Nehmen Sie Kontakt mit mir auf für Kooperationen und Anfragen."
+    />
+    <meta
+      property="og:image"
+      content="https://draculady.de/Pictures/Profile_Picture.webp"
+    />
+    <meta
+      property="og:url"
+      content="https://draculady.de/Pages/contact-deutsch.html"
+    />
+    <meta property="og:type" content="website" />
     <link
       rel="alternate"
       href="https://draculady.de/index.html"
