--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -24,6 +24,21 @@
 
     <meta name="author" content="Kathrin Peled Draculady" />
     <meta name="robots" content="index, follow" />
+    <!-- OpenGraph Meta Tags for Files Page (German) -->
+    <meta property="og:title" content="Dateien von Kathrin Peled" />
+    <meta
+      property="og:description"
+      content="Entdecken Sie die Dateien und Ressourcen, die von Kathrin Peled geteilt werden."
+    />
+    <meta
+      property="og:image"
+      content="https://draculady.de/Pictures/Profile_Picture.webp"
+    />
+    <meta
+      property="og:url"
+      content="https://draculady.de/Pages/files-german.html"
+    />
+    <meta property="og:type" content="website" />
     <link
       rel="alternate"
       href="https://draculady.de/index.html"
