--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -24,6 +24,21 @@
 
     <meta name="author" content="Kathrin Peled Draculady" />
     <meta name="robots" content="index, follow" />
+    <!-- OpenGraph Meta Tags for Resume Page -->
+    <meta property="og:title" content="Kathrin Peled - Resume" />
+    <meta
+      property="og:description"
+      content="View my professional resume and experience."
+    />
+    <meta
+      property="og:image"
+      content="https://draculady.de/Pictures/Profile_Picture.webp"
+    />
+    <meta
+      property="og:url"
+      content="https://draculady.de/Pages/resume-english.html"
+    />
+    <meta property="og:type" content="website" />
     <link
       rel="alternate"
       href="https://draculady.de/index.html"
