--- a/Pages/resume-mobile-german.html
+++ b/Pages/resume-mobile-german.html
@@ -24,6 +24,21 @@
 
     <meta name="author" content="Kathrin Peled Draculady" />
     <meta name="robots" content="index, follow" />
+    <!-- OpenGraph Meta Tags for Mobile Resume Page (German) -->
+    <meta property="og:title" content="Kathrin Peled - Mobiler Lebenslauf" />
+    <meta
+      property="og:description"
+      content="Sehen Sie sich meinen beruflichen Lebenslauf an, der für mobile Geräte optimiert ist."
+    />
+    <meta
+      property="og:image"
+      content="https://draculady.de/Pictures/Profile_Picture.webp"
+    />
+    <meta
+      property="og:url"
+      content="https://draculady.de/Pages/resume-mobile-german.html"
+    />
+    <meta property="og:type" content="website" />
     <link
       rel="alternate"
       href="https://draculady.de/index.html"
