--- a/index-german.html
+++ b/index-german.html
@@ -24,6 +24,21 @@
 
     <meta name="author" content="Kathrin Peled Draclady" />
     <meta name="robots" content="index, follow" />
+    <!-- OpenGraph Meta Tags for German Homepage -->
+    <meta
+      property="og:title"
+      content="Kathrin Peled - Webentwicklerin Portfolio"
+    />
+    <meta
+      property="og:description"
+      content="Entdecken Sie Kathrin Peleds Portfolio mit ihren Webentwicklungsprojekten und Fähigkeiten."
+    />
+    <meta
+      property="og:image"
+      content="https://draculady.de/Pictures/Profile_Picture.webp"
+    />
+    <meta property="og:url" content="https://draculady.de/index-german.html" />
+    <meta property="og:type" content="website" />
     <link
       rel="alternate"
       href="https://draculady.de/index.html"
