--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -24,6 +24,21 @@
 
     <meta name="author" content="Kathrin Peled Draculady" />
     <meta name="robots" content="index, follow" />
+    <!-- OpenGraph Meta Tags for Portfolio Page -->
+    <meta property="og:title" content="Kathrin Peled - Portfolio" />
+    <meta
+      property="og:description"
+      content="Discover my web development projects and skills."
+    />
+    <meta
+      property="og:image"
+      content="https://draculady.de/Pictures/Profile_Picture.webp"
+    />
+    <meta
+      property="og:url"
+      content="https://draculady.de/Pages/portfolio-english.html"
+    />
+    <meta property="og:type" content="website" />
     <link
       rel="alternate"
       href="https://draculady.de/index.html"
@@ -86,7 +101,10 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="canonical" href="https://draculady.de/Pages/portfolio-english.html" />
+    <link
+      rel="canonical"
+      href="https://draculady.de/Pages/portfolio-english.html"
+    />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Charis+SIL:ital,wght@0,400;0,700;1,400;1,700&family=Courgette&family=DM+Serif+Text:ital@0;1&family=Inter:wght@100..900&family=Kalam:wght@300;400;700&family=Maven+Pro:wght@400..900&family=Pacifico&family=Permanent+Marker&family=Poetsen+One&display=swap"
