--- a/index.html
+++ b/index.html
@@ -24,6 +24,21 @@
 
     <meta name="author" content="Kathrin Peled Draculady" />
     <meta name="robots" content="index, follow" />
+    <!-- OpenGraph Meta Tags for Homepage -->
+    <meta
+      property="og:title"
+      content="Kathrin Peled - Web Developer Portfolio"
+    />
+    <meta
+      property="og:description"
+      content="Explore Kathrin Peled's portfolio showcasing her web development projects and skills."
+    />
+    <meta
+      property="og:image"
+      content="https://draculady.de/Pictures/Profile_Picture.webp"
+    />
+    <meta property="og:url" content="https://draculady.de/" />
+    <meta property="og:type" content="website" />
     <link
       rel="alternate"
       href="https://draculady.de/index.html"
