updting head links for seo

--- a/Pages/contact-deutsch.html
+++ b/Pages/contact-deutsch.html
@@ -161,6 +161,8 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
+     <!-- Link to the Schema.js file -->
+     <script src="../Scripts/schema.js" defer></script>
     <title id="contact-german">Kathrin Peled - Kontakt</title>
     <link
       rel="icon"
