--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -163,6 +163,8 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
+    <!-- Link to the Schema.js file -->
+    <script src="../Scripts/schema.js" defer></script>
     <title id="contact-english">Kathrin Peled - contact</title>
     <link
       rel="icon"
