--- a/Pages/files-english.html
+++ b/Pages/files-english.html
@@ -147,6 +147,8 @@
       rel="stylesheet"
     />
     <script src="../Scripts/script.js"></script>
+    <!-- Link to the Schema.js file -->
+    <script src="../Scripts/schema.js" defer></script>
     <link rel="stylesheet" href="../Styles/style.css" />
     <!-- Google tag (gtag.js) -->
     <script
