--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -159,6 +159,8 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
+    <!-- Link to the Schema.js file -->
+    <script src="../Scripts/schema.js" defer></script>
     <title id="files-german">Kathrin Peled - Dateien</title>
     <link
       rel="icon"
