--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -162,6 +162,8 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
+    <!-- Link to the Schema.js file -->
+    <script src="../Scripts/schema.js" defer></script>
     <title id="portfolio-german">Kathrin Peled - Portfolio</title>
     <link
       rel="icon"
