--- a/Pages/resume-mobile-german.html
+++ b/Pages/resume-mobile-german.html
@@ -158,6 +158,8 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
+    <!-- Link to the Schema.js file -->
+    <script src="../Scripts/schema.js" defer></script>
     <title id="resume-mobile-german">Kathrin Peled - Lebenslauf</title>
     <link
       rel="icon"
