--- a/index-german.html
+++ b/index-german.html
@@ -161,6 +161,8 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
+    <!-- Link to the Schema.js file -->
+    <script src="Scripts/schema.js" defer></script>
     <title id="index-german">Kathrin Peleds Portfolio - Startseite</title>
     <link
       rel="icon"
