--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
+     <!-- Link to the Schema.js file -->
+     <script src="Scripts/schema.js" defer></script>
     <title id="index-english">Kathrin Peled's Portfolio - Homepage</title>
     <link
       rel="icon"
